# CppWeightedLowess

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  compare-limma.yaml  create-tag.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  Options_8hpp.html  Options_8hpp__dep__incl.map  Options_8hpp__dep__incl.md5  Options_8hpp__incl.map  Options_8hpp__incl.md5  Options_8hpp_source.html  SortBy_8hpp.html  SortBy_8hpp__dep__incl.map  SortBy_8hpp__dep__incl.md5  SortBy_8hpp__incl.map  SortBy_8hpp__incl.md5  SortBy_8hpp_source.html  WeightedLowess.tag  WeightedLowess_8hpp.html  WeightedLowess_8hpp__incl.map  WeightedLowess_8hpp__incl.md5  WeightedLowess_8hpp_source.html  annotated.html  classWeightedLowess_1_1SortBy-members.html  classWeightedLowess_1_1SortBy.html  classWeightedLowess_1_1WeightedLowess-members.html  classWeightedLowess_1_1WeightedLowess.html  classes.html  compute_8hpp.html  compute_8hpp__dep__incl.map  compute_8hpp__dep__incl.md5  compute_8hpp__incl.map  compute_8hpp__incl.md5  compute_8hpp_source.html  dir_7f752757ec3944a7ccbb4c687c36051d.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f4dfbfd383a08a99fcdaa754a5a366f1.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  (+35 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+10 more)
include/WeightedLowess/: Options.hpp  SortBy.hpp  WeightedLowess.hpp  compute.hpp  fit.hpp  interpolate.hpp  parallelize.hpp  robust.hpp  utils.hpp  window.hpp
tests/: CMakeLists.txt
tests/R/: DESCRIPTION  NAMESPACE  build.R  run.R  test.cpp
tests/R/R/: RcppExports.R  WeightedLowess-package.R
tests/R/man/: WeightedLowess.tests-package.Rd
tests/R/src/: INCLUDES  Makevars  RcppExports.cpp  test.cpp
tests/R/tests/: testthat.R
tests/R/tests/testthat/: test-run.R
tests/src/: SortBy.cpp  basic.cpp  compute.cpp  divzero.cpp  interpolate.cpp  options.cpp  parallel.h  reference.cpp  robust.cpp  runners.cpp  ties.cpp  utils.cpp  utils.h  window.cpp
